@@ -17,7 +17,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.64
+Release: 0.65
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -516,8 +516,9 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
-* Fri Aug  2 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.64
+* Fri Aug  2 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.65
 - fix: identify athlon with 3DNOWEXT as "athlon", not "i786" (#70539).
+- fix: repair --root with --verify (#70527).
 
 * Thu Aug  1 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.63
 - add check-files to rpm-build manifest.
